--- a/minimax.tex
+++ b/minimax.tex
@@ -117,6 +117,8 @@ In this setting, we propose a method for robust approximate winner determination
 
 \pagestyle{fancy}
 \fancyhead{}
+\setlength{\footskip}{1.6cm}
+\cfoot{\thepage}
 
 %%% The next command prints the information defined in the preamble.
 
