--- a/minimax.tex
+++ b/minimax.tex
@@ -163,7 +163,7 @@ Knowing this permits to choose the questioning strategy wisely depending on the 
 
 The paper is organized as follows. \Cref{sec:related} reviews the works related to our objective.
 \Cref{sec:background} provides the necessary background and \cref{sec:mmr} introduces the minimax criterion, a method that selects a winner that minimizes the worst possible regret.
-In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minimal regret;  Section \ref{sec:experiments} presents the experiments validation of our approach and the guidelines stemming from these simulations; and Section \ref{sec:conclusions} provides some final thoughts.
+In Section \ref{sec:elicit} we provide an interactive elicitation protocol based on minimal regret;  Section \ref{sec:experiments} presents an experimental validation of our approach and some guidelines stemming from these simulations; and Section \ref{sec:conclusions} provides some final thoughts.
 
 \section{Related Work}
 \label{sec:related}
