revision of the bib + new references

--- a/biblio.bib
+++ b/biblio.bib
@@ -1,8 +1,5 @@
 @inproceedings{Benabbou2016,
-  author    = {Nawal Benabbou and
-               Serena Di Sabatino Di Diodoro and
-               Patrice Perny and
-               Paolo Viappiani},
+  author    = {Benabbou,Nawal and Di Sabatino Di Diodoro, Serena and Perny, Patrice and Viappiani,Paolo},
   title     = {Incremental Preference Elicitation in Multi-attribute Domains for
                Choice and Ranking with the Borda Count},
   booktitle = {Scalable Uncertainty Management - 10th International Conference, {SUM}
@@ -12,23 +9,26 @@
 }
 
 @Article{Boutilier2006,
-  title = "Constraint-based optimization and utility elicitation using the minimax decision criterion",
-  journal = "Artificial Intelligence",
-  volume = "170",
-  number = "8",
-  pages = "686 - 713",
-  year = "2006",
-  issn = "0004-3702",
-  doi = "https://doi.org/10.1016/j.artint.2006.02.003",
-  url = "http://www.sciencedirect.com/science/article/pii/S0004370206000245",
-  author = "Boutilier,Craig and Patrascu,Relu and Poupart,Pascal and Schuurmans,Dale"
+  title = {Constraint-based optimization and utility elicitation using the minimax decision criterion},
+  journal = {Artificial Intelligence},
+  volume = {170},
+  number = {8},
+  pages = {686 - 713},
+  year = {2006},
+  issn = {0004-3702},
+  doi = {10.1016/j.artint.2006.02.003},
+  author = {Boutilier,Craig and Patrascu,Relu and Poupart,Pascal and Schuurmans,Dale}
 }
 
-@PhdThesis{Braziunas2011,
-  Title = {Decision-theoretic elicitation of generalized additive utilities},
-  Author = {Braziunas,Darius},
-  School = {University of Toronto},
-  Year = {2011}
+
+@PhdThesis{Braziunas2012,
+  author = {Braziunas, Darius},
+  advisor = {Boutilier, Craig},
+  title = {Decision-Theoretic Elicitation of Generalized Additive Utilities},
+  year = {2012},
+  isbn = {9780494975220},
+  publisher = {University of Toronto},
+  url={dl.acm.org/doi/book/10.5555/2519022}
 }
 
 @InProceedings{Cailloux2014,
@@ -38,7 +38,6 @@
   Year = {2014},
   Pages = {183--188},
   Doi = {10.3233/978-1-61499-419-0-183},
-  Timestamp = {Wed, 24 May 2017 08:27:19 +0200}
 }
 
 @Article{Kalech2011,
@@ -48,7 +47,8 @@
   Year = {2011},
   Number = {1},
   Pages = {151--182},
-  Volume = {22}
+  Volume = {22},
+  doi = {10.1007/s10458-010-9133-6}
 }
 
 @InProceedings{Konczak05,
@@ -58,6 +58,7 @@
   Year = {2005},
   Pages = {124--129},
   Keywords = {voting, social choice, preferences}
+  doi={www.eecs.harvard.edu/cs286r/courses/fall11/papers/KL05.pdf}
 }
 
 @Book{Kouvelis1997,
@@ -77,7 +78,7 @@
   Number                   = {3},
   Pages                    = {567--584},
   Volume                   = {25},
-  Day                      = {01}
+  doi = {10.1007/s10726-015-9452-8}
 }
 
 @Article{Llamazares2013,
@@ -88,23 +89,22 @@
   Number                   = {2},
   Pages                    = {348--355},
   Volume                   = {230},
-  Bibsource                = {dblp computer science bibliography, http://dblp.org},
-  Biburl                   = {http://dblp.org/rec/bib/journals/eor/LlamazaresP13},
-  Doi                      = {10.1016/j.ejor.2013.04.013},
-  Timestamp                = {Thu, 15 Jun 2017 21:31:49 +0200},
-  Url                      = {https://doi.org/10.1016/j.ejor.2013.04.013}
+  Doi                      = {10.1016/j.ejor.2013.04.013}
 }
 
-@InProceedings{Lu2011,
-  Title                    = {Robust Approximation and Incremental Elicitation in Voting Protocols},
-  Author                   = {Lu, Tyler and Boutilier,Craig},
-  Booktitle                = {Proceedings of {IJCAI} 2011},
-  Year                     = {2011},
-  Pages                    = {287--293}
+@inproceedings{Lu2011,
+	author = {Lu, Tyler and Boutilier, Craig},
+	year = {2011},
+	month = {01},
+	pages = {287-293},
+	title = {Robust Approximation and Incremental Elicitation in Voting Protocols},
+	journal = {IJCAI International Joint Conference on Artificial Intelligence},
+	doi = {10.5591/978-1-57735-516-8/IJCAI11-058}
 }
+
 
 @Article{Naamani-Dery2015,
-  Title                    = {Preference Elicitation for Group Decisions Using the {B}orda Voting Rule},
+  Title                    = {Preference Elicitation for Group Decisions Using the Borda Voting Rule},
   Author                   = {Naamani-Dery, Lihi and Golan, Inon and Kalech, Meir and Rokach, Lior},
   Journal                  = {Group Decision and Negotiation},
   Year                     = {2015},
@@ -112,7 +112,8 @@
   Number                   = {6},
   Pages                    = {1015--1033},
   Volume                   = {24},
-  Day                      = {01}
+  Day                      = {01},
+  doi={10.1007/s10726-015-9427-9}
 }
 
 @Article{Pini2009,
@@ -123,7 +124,8 @@
   number={3},
   pages={475--502},
   year={2009},
-  publisher={Oxford University Press}
+  publisher={Oxford University Press},
+  doi={10.1093/logcom/exn012}
 }
 
 @Article{Salo2001,
@@ -138,7 +140,7 @@
 }
 
 @Book{Savage1954,
-  Title                    = {{The Foundations of Statistics}},
+  Title                    = {The Foundations of Statistics},
   Author                   = {Savage, Leonard J. },
   Publisher                = {Wiley},
   Year                     = {1954},
@@ -153,26 +155,31 @@
   Number                   = {1},
   Pages                    = {78 - 85},
   Volume                   = {74},
-  Doi                      = {https://doi.org/10.1016/0377-2217(94)90205-4},
-  ISSN                     = {0377-2217},
-  Keywords                 = {Decision-making, Stochastic dominance, Preference analysis, Sports},
-  Url                      = {http://www.sciencedirect.com/science/article/pii/0377221794902054}
+  Doi                      = {10.1016/0377-2217(94)90205-4},
+  ISSN                     = {0377-2217}
 }
 
+
 @InProceedings{Viappiani2018,
-  Title                    = {Positional Scoring Rules with Uncertain Weights},
-  Author                   = {Paolo Viappiani},
-  Booktitle                = {Scalable Uncertainty Management - 12th International Conference, {SUM} 2018, Milan, Italy, October 3-5, 2018, Proceedings},
-  Year                     = {2018},
-  Pages                    = {306--320}
+	author={Viappiani, Paolo},
+	editor={Ciucci, Davide and Pasi, Gabriella and Vantaggi, Barbara},
+	title={Positional Scoring Rules with Uncertain Weights},
+	booktitle= {Scalable Uncertainty Management},
+	year={2018},
+	publisher={Springer International Publishing},
+	pages={306--320},
+	isbn={978-3-030-00461-3},
+	doi={10.1007/978-3-030-00461-3_21}
 }
+
 
 @InProceedings{Xia2008,
   Title                    = {Determining Possible and Necessary Winners under Common Voting Rules Given Partial Orders},
   Author                   = {Xia,Lirong and Conitzer,Vincent},
   Booktitle                = {Proceedings of the Twenty-Third {AAAI} Conference on Artificial Intelligence, {AAAI} 2008, Chicago, Illinois, USA, July 13-17, 2008},
   Year                     = {2008},
-  Pages                    = {196--201}
+  Pages                    = {196--201},
+  doi= {10.1613/jair.3186}
 }
 
 @inproceedings{Conitzer2005,
@@ -182,7 +189,6 @@
 	isbn = {1595930493},
 	publisher = {Association for Computing Machinery},
 	address = {New York, NY, USA},
-	url = {https://doi.org/10.1145/1064009.1064018},
 	doi = {10.1145/1064009.1064018},
 	booktitle = {Proceedings of the 6th ACM Conference on Electronic Commerce},
 	pages = {78–87},
@@ -198,7 +204,7 @@
 	booktitle = {IJCAI},
 	year = {2007},
 	pages = {1464-1469},
-	url = {http://dli.iiit.ac.in/ijcai/IJCAI-2007/PDF/IJCAI07-236.pdf}
+	doi = {10.1016/j.artint.2010.11.009}
 }
 
 @inproceedings{Walsh2007,
@@ -211,18 +217,26 @@
 	pages = {3–8},
 	numpages = {6},
 	location = {Vancouver, British Columbia, Canada},
-	series = {AAAI'07}
+	series = {AAAI'07},
+	url = {dl.acm.org/doi/10.5555/1619645.1619648}
 }
 
-@article{Walsh2009,
+@inproceedings{Walsh2009,
 	author = {Walsh, Toby},
-	year = {2009},
-	month = {04},
-	pages = {},
 	title = {Complexity of Terminating Preference Elicitation},
-	volume = {2},
-	journal = {Computing Research Repository - CORR}
+	year = {2008},
+	isbn = {9780981738116},
+	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+	address = {Richland, SC},
+	booktitle = {Proceedings of the 7th International Joint Conference on Autonomous Agents and Multiagent Systems - Volume 2},
+	pages = {967–974},
+	numpages = {8},
+	keywords = {elicitation, complexity, preferences},
+	location = {Estoril, Portugal},
+	series = {AAMAS '08},
+	url ={dl.acm.org/doi/abs/10.5555/1402298.1402357}
 }
+
 
 @article{Conitzer2009,
 	author = {Conitzer, Vincent},
@@ -237,7 +251,8 @@
 	journal = {J. Artif. Int. Res.},
 	month = jun,
 	pages = {161–191},
-	numpages = {31}
+	numpages = {31},
+	url={dl.acm.org/doi/10.5555/1641503.1641507}
 }
 
 @inproceedings{Dey2016,
@@ -250,7 +265,8 @@
 	pages = {215–221},
 	numpages = {7},
 	location = {New York, New York, USA},
-	series = {IJCAI'16}
+	series = {IJCAI'16},
+	url={www.ijcai.org/Proceedings/16/Papers/038.pdf}
 }
 
 @inproceedings{Dey2016_2,
@@ -259,7 +275,7 @@
 	year={2016},
 	cdate={1451606400000},
 	pages={222-228},
-	url={http://www.ijcai.org/Abstract/16/039},
+	url={www.ijcai.org/Abstract/16/039},
 	booktitle={IJCAI}
 }
 
@@ -270,8 +286,7 @@
 	pages = {78 - 99},
 	year = {2018},
 	issn = {0304-3975},
-	doi = {https://doi.org/10.1016/j.tcs.2018.03.012},
-	url = {http://www.sciencedirect.com/science/article/pii/S0304397518301737},
+	doi = {10.1016/j.tcs.2018.03.012},
 	author = {Dey,Palash and Misra,Neeldhara and Y. Narahari},
 	keywords = {Voting, Manipulation, Incomplete information, Algorithm, Computational complexity}
 }
@@ -286,7 +301,8 @@
 	pages = {236–242},
 	numpages = {7},
 	location = {New York, New York, USA},
-	series = {IJCAI'16}
+	series = {IJCAI'16},
+	url={www.ijcai.org/Proceedings/16/Papers/041.pdf}
 }
 
 @article{Dey2018_2,
@@ -295,7 +311,8 @@
 	journal={Theor. Comput. Sci.},
 	year={2018},
 	volume={731},
-	pages={36-49}
+	pages={36-49},
+	url = {www.sciencedirect.com/science/article/abs/pii/S0304397518302068}
 }
 
 @inproceedings{Elkind2012,
@@ -310,7 +327,8 @@
 	numpages = {8},
 	keywords = {uncertainty, computational social choice, manipulation},
 	location = {Valencia, Spain},
-	series = {AAMAS '12}
+	series = {AAMAS '12},
+	url={dl.acm.org/doi/10.5555/2343776.2343786}
 }
 
 @inproceedings{Conitzer2011,
@@ -318,7 +336,7 @@
 	title={Dominating Manipulations in Voting with Partial Information},
 	year={2011},
 	cdate={1293840000000},
-	url={http://www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
+	url={www.aaai.org/ocs/index.php/AAAI/AAAI11/paper/view/3706},
 	booktitle={AAAI},
 }
 
@@ -346,5 +364,34 @@
 	keywords = {voting theory, computational social choice},
 	location = {Valencia, Spain},
 	series = {AAMAS '12}
+	url={dl.acm.org/doi/10.5555/2343776.2343787}
 }
 
+@article{Giritligil2005,
+	author = {Giritligil, Ayca and Sertel, Murat and Kara, Ayça},
+	year = {2005},
+	month = {02},
+	pages = {43-73},
+	title = {Does majoritarian approval matter in selecting a social choice rule? An exploratory panel study},
+	volume = {25},
+	journal = {Social Choice and Welfare},
+	doi = {10.1007/s00355-005-0024-8}
+}
+
+
+
+@inproceedings{Baumeister2019,
+	author = {Baumeister, Dorothea and Hogrebe, Tobias},
+	title = {Manipulative Design of Scoring Systems},
+	year = {2019},
+	isbn = {9781450363099},
+	publisher = {International Foundation for Autonomous Agents and Multiagent Systems},
+	address = {Richland, SC},
+	booktitle = {Proceedings of the 18th International Conference on Autonomous Agents and MultiAgent Systems},
+	pages = {1814–1816},
+	numpages = {3},
+	keywords = {scoring system, manipulation, distances},
+	location = {Montreal QC, Canada},
+	series = {AAMAS '19},
+	url = {dl.acm.org/doi/10.5555/3306127.3331928}
+}
